--- a/index.html
+++ b/index.html
@@ -2,26 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="keywords" content="Robotics">
-    <meta name="keywords" content="genzonix">
-    <meta name="keywords" content="college projects">
-    <meta name="keywords" content="school projects">
-    <meta name="keywords" content="DIY kits">
-    <meta name="keywords" content="ESP32">
-    <meta name="keywords" content="Arduino">
-    <meta name="keywords" content="Relay">
-    <meta name="keywords" content="Sensors">
-    <meta name="keywords" content="buzzer">
-    <meta name="keywords" content="LED">
-    <meta name="keywords" content="Electronics components">
-    <meta name="keywords" content="genzonix mayiladuthurai">
-    <meta name="keywords" content="Mayiladuthurai">
-    <meta name="keywords" content="Robotics mayiladuthurai">
-    <meta name="keywords" content="Projects">
-    <meta name="keywords" content="DIY kit">
-    <meta name="keywords" content="STEM">
-    <meta name="keywords" content="Education">
+    <meta name="keywords" content="Robotics, genzonix, college projects, school projects, DIY kits, ESP32, Arduino, Relay, Sensors, buzzer, LED, Electronics components, genzonix mayiladuthurai, Mayiladuthurai, Robotics mayiladuthurai, Projects, DIY kit, STEM, Education">
     <meta name="description" content="Explore Genzonix for STEM DIY kits in IoT, Cloud, and AI. Hands-on learning with innovative technology.">
+    <meta name="google-adsense-account" content="ca-pub-8221896583602471">
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
