--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="Robotics, genzonix, college projects, school projects, DIY kits, ESP32, Arduino, Relay, Sensors, buzzer, LED, Electronics components, genzonix mayiladuthurai, Mayiladuthurai, Robotics mayiladuthurai, Projects, DIY kit, STEM, Education">
     <meta name="description" content="Explore Genzonix for STEM DIY kits in IoT, Cloud, and AI. Hands-on learning with innovative technology.">
     <meta name="google-adsense-account" content="ca-pub-8221896583602471">
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
