--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8221896583602471" crossorigin="anonymous"></script>
     <title>GenZonix | innovative minds | Empowering Devices | Home</title>
+    <link rel="canonical" href="https://www.genzonix.in/" />
+
   </head>
   <body>
     <div id="root"></div>
